samples/hello-dm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        trace: hello-release
    spec:
      containers:
      - name: hello
        image: ruly-reg.xxx.com/test/hello:release
        ports:
        - containerPort: 8080
