samples/hello-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  rules:
  - host: hello.control.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
